--- a/aerospike-client-c-dependencies.nuspec
+++ b/aerospike-client-c-dependencies.nuspec
@@ -31,6 +31,7 @@ zlib 1.2.8.8
     <tags>Aerospike database C client dependencies native</tags>
   </metadata>
   <files>
+    <file src="icon.png" target="" />
 	<file src="aerospike-client-c-dependencies.targets" target="build\native" />
 	<file src="README.md" target="build\native" />
 	<file src="include\**" target="build\native\include" />
